testsuite/tests/parser/should_fail/T17594b.hs
module T17594b where

foo :: forall a. a -> a
foo @a =
  case a of
    @a -> id
